- Added basic support for Weapons having Ratings. Currently used exclusively by weapons created via addweapon nodes. To be added to other weapons at a later date. (Need to figure out a good way to make it work in the datagrid view)
- Added the house rule to spend skill points on broken skill groups to the options form. Closes #1990

Application Fixes:
- Fixed a regression in the behaviour of essence holes incorrectly being saved as 100 times the intended value. 
- Fixed an issue with the Skills tab not showing properly when first creating a character.
- Fixed specialisations not properly being added to dicepool when firing weapons.
- Fixed a regression in the behaviour of shapeshifters in karmagen not automatically selecting 'Human' if the 'None' metavariant is selected.
- Fixed a regression in the behaviour of mastery qualities incorrectly counting towards used spells and karma.
- Fixed issues with copying and pasting cyberware. Note that it's currently not permissible to paste cyberware into other cyberware.
- Fixed extraneous messages about leaving a group when updating character properties if the character is a member of an initiation group.
- Fixed a regression in the behaviour of the spellcategory improvement type that caused all improvements of that type to apply to all spells.
- Fixed an issue with Talent choices not refreshing unless the metavariant index was refreshed.

Data Changes:
- Removed extraneous Magic Sense quality. Closes #4021
- Added support to the SR Missions 1.4 Rules customdata file for the ruling that vehicles without defined sensor functions receive them according to the rating of the sensor array. Closes #2206
- Fixed incorrect name of the aerodynamic molotov cocktail.
- Added conditions to taking the Witness My Hate quality.
- Added metavariant stats for insect spirits.
- Added customdata rule to have shapeshifter initative bonuses apply as the default metatype initiative value instead of a bonus. 